# DependencyWalker-rs

./: .gitmessage  .goreleaser.yml  .release-please-config.json  CHANGELOG.md  Cargo.toml  GUI_FIXES_SUMMARY.md  GUI_IMPLEMENTATION_SUMMARY.md  ICED_MIGRATION_PROGRESS.md  MANUAL_TESTING_GUIDE.md  MODERN_GUI_IMPROVEMENTS.md  README.md  build.rs  demo_gui_features.bat  demo_gui_features.ps1  demo_gui_features.py  test_msvc.rs  test_simple_slint.rs
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  clean-pr-description.yml  release-please.yml  release.yml
docs/: GUI_FEATURES_IMPLEMENTED.md
examples/: gui_features_demo.rs  simple_gui_test.rs  simple_slint_test.rs  slint_gui_test.rs  test_dependency_analysis.rs  test_dll_resolver.rs  test_gui.rs  test_pe_parser.rs
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/core/: dependency.rs  mod.rs  pe_parser.rs  resolver.rs  tree.rs  types.rs
src/gui/: app.rs  message.rs  mod.rs  slint_app.rs  style.rs
src/gui/components/: mod.rs
tests/: cli_commands_tests.rs  cli_tests.rs  core_gui_test.rs  dependency_tests.rs  error_tests.rs  gui_functionality_test.rs  pe_parser_tests.rs  resolver_tests.rs  test_dependency_analysis.rs  test_dll_resolver.rs  test_gui.rs  test_pe_parser.rs  tree_tests.rs  types_tests.rs
ui/: main.slint
ui/components/: dependency_tree.slint  functions_list.slint  module_details.slint  welcome.slint
ui/styles/: theme.slint
